@@ -86,6 +86,7 @@ setup(name='pyOpenSSL', version=__version__,
                      mkExtension('SSL')],
       py_modules  = ['OpenSSL.__init__', 'OpenSSL.tsafe',
                      'OpenSSL.version', 'OpenSSL.test.__init__',
+                     'OpenSSL.test.util',
                      'OpenSSL.test.test_crypto',
                      'OpenSSL.test.test_ssl'],
       data_files = data_files,
